2025-11-07 claude 랑 함께 작업물